# SlackBot_Manage

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  compose.yml  fix_db.py  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  logger.py  main.py
app/api/routes/: followthru.py  health.py  slack_commands.py  slack_interactions.py  workflows.py
app/db/: base.py  session.py
app/db/migrations/: env.py
app/db/models/: __init__.py  audit_log.py  canvas_version.py  chat_message.py  chat_session.py  draft.py  extracted_item.py  extraction_result_record.py  ingestion_job.py  normalized_artifact.py  provider_access_record.py  retry_record.py  share.py  source.py  source_artifact.py  transcript_artifact.py  user.py  workspace.py
app/db/repositories/: __init__.py
app/integrations/: openai_client.py  slack_client.py
app/slack/: bolt_app.py
app/workers/: job_queue.py
diagrams/: generate_architecture_diagrams_pdf.py
docs/: LAUNCH_CHECKLIST.md  PROJECT_STRUCTURE.md  RUNNING.md  followthru_architecture_diagrams.md
scripts/: dev.py  seed.py
tests/unit/: test_canvas_composer.py  test_dm_ingestion_service.py  test_draft_service.py  test_extraction_service.py  test_followthru_routes.py  test_followthru_service.py  test_health.py  test_ingestion_job_service.py  test_input_classifier.py  test_job_state_machine.py  test_media_processing_service.py  test_settings.py  test_slack_client.py  test_slack_commands.py  test_source_resolver.py  test_transcription_service.py  test_workflow_preview.py  test_zoom_provider.py
(+35 files in other folders)
